matrix/eturnal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: turn-ingress
  namespace: matrix
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - turn.prayujt.com
    secretName: turn-prayujt-com-certs
  rules:
  - host: turn.prayujt.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: eturnal
            port:
              number: 3478
